# comp3340-passman

./: Critical Summary.md  Dockerfile  README.md  run.ps1
frontend/: .env.example  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.html
frontend/src/components/: FullscreenModal.svelte  Logo.svelte  OpenIconicIcon.svelte  SimpleButton.svelte  TextInput.svelte
frontend/src/components/Form/: SubmitButton.svelte
frontend/src/components/Sidebar/: GroupHeading.svelte  GroupItem.svelte
frontend/src/lib/: auth.ts  axios.ts  cryptography.ts  lastUserStore.ts  siphash.ts  stores.ts  types.ts  utilities.ts  vaults.ts
frontend/src/routes/: +layout.svelte  +page.svelte  +page.ts
frontend/src/routes/create-account/: +page.svelte
frontend/src/routes/home/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
frontend/src/routes/home/[vault]/: +page.svelte  +page.ts  VaultItemContents.svelte
frontend/src/routes/home/[vault]/components/: VaultItemContents.svelte  VaultItemField.svelte
frontend/src/routes/sign-in/: +page.svelte  +page.ts  pageFunctions.ts
server/: Cargo.toml  Dockerfile  rust-toolchain.toml
server/data/: .gitignore  encrypt
server/data/99bd3e87-0bd2-48e3-a840-98aea0a1c07c/: data  iv  key
server/src/: auth.rs  error_handlers.rs  main.rs  object.rs  protocol.rs
server/tests/: pbkdf  test.iv  test.priv  test.pub
technical-info/: auth.md  object-access.md  protocol.md
