[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
rusqlite = "0.29.0"
tokio = "1.29.1"
serde = {version="=1.0.171",features=["derive"]}
serde_derive = "<=1.0.171"
serde_json = "1.0.103"
bincode = {version="2.0.0-rc.3"}
bincode_derive = "2.0.0-rc.3"
base64 = "0.21.2"
openssl = "0.10.55"
siphasher = "0.3"